packages/survey-core/src/default-theme/blocks/header.scss
@use "../variables.scss" as *;
@use "../typography-mixins.scss" as *;

.sv-header {
  position: relative;
  background-color: var(--sjs2-color-component-header-default-bg);
}

.sv-header__overlap {
  padding-bottom: var(--sjs2-spacing-x800);
  box-sizing: content-box;

  & ~ div {
    .sd-body,
    .sv-body {
      margin-top: calc(var(--sjs2-base-unit-spacing) * -14);
    }
  }
}

.sd-root-modern--mobile .sv-header__overlap {
  padding-bottom: var(--sjs2-spacing-x200);

  & ~ div {
    .sd-body,
    .sv-body {
      margin-top: var(--sjs2-spacing-negative-x500);
    }
  }
}

.sv-header__overlap.sv-header__without-background {
  margin-bottom: 0;
  padding-bottom: 0;

  & ~ div {
    .sd-body,
    .sv-body {
      margin-top: 0;
    }
  }
}

.sv-header__without-background {
  .sv-header--mobile,
  .sv-header__content {
    padding-bottom: 0;
  }
}

.sd-body {
  .sv-header__content {
    padding-top: 0;
    padding-bottom: var(--sjs2-spacing-x500);
  }
}

.sv-header__content {
  padding: var(--sjs2-spacing-x500) var(--sjs2-layout-component-header-box-padding-horizontal, 40px);
  box-sizing: border-box;
  height: 100%;
  position: relative;
  display: grid;
  // grid-auto-rows: min-content;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  row-gap: var(--sjs2-spacing-x150);
  column-gap: var(--sjs2-spacing-x600);
}

.sv-header--height-auto {
  .sv-header__content {
    grid-template-rows: auto;
    height: auto;
  }

  .sv-header__cell:not(.sv-header__cell--empty) .sv-header__cell-content {
    position: relative;
    min-height: 100%;
    min-width: 100%;
  }

  .sv-header__cell--right .sv-header__cell-content {
    left: 100%;
    transform: translateX(-100%);
  }
}

.sv-header__content--static {
  max-width: calc(var(--sjs2-base-unit-size) * 90);
  margin-left: auto;
  margin-right: auto;
}

.sv-header__background-image {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  border: 0;
  background-position-x: center;
}

.sv-header__background-image--contain {
  background-repeat: no-repeat;
}

.sv-header__cell {
  position: relative;
}

.sv-header__cell-content {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: max-content;
  max-width: 300%;
  // height: max-content;
  top: 0;
  bottom: 0;
}

.sv-header__cell--left {
  .sv-header__cell-content {
    left: 0;
  }
}

.sv-header__cell--center {
  .sv-header__cell-content {
    min-width: 100%;
    left: 50%;
    transform: translateX(-50%);
  }
}

.sv-header__cell--right {
  .sv-header__cell-content {
    right: 0;
  }
}

.sv-header__logo {
  display: flex;

  img {
    display: block;
  }
}

.sv-header__title {
  display: flex;
}

.sv-header__title .sd-title {
  @include sjs2--typography--component--header--title;
  margin: 0;
}

.sv-header__logo ~ .sv-header__title {
  margin-top: var(--sjs2-spacing-x300);
}

.sv-header__logo ~ .sv-header__description {
  margin-top: var(--sjs2-spacing-x300);
}

.sv-header__title ~ .sv-header__description {
  margin-top: var(--sjs2-spacing-x100);
}

.sv-header__description {
  display: flex;
}

.sv-header__description .sd-description {
  @include sjs2--typography--component--header--description;
  margin: 0;
}

.sv-header__content .sd-header__text h3 {
  margin: 0;
}

.sv-header--mobile {
  padding: var(--sjs2-spacing-x300);
  position: relative;
  z-index: 1;

  .sv-header__logo img {
    max-width: 100%;
  }
}

